@startuml

title __SERVICE's Class Diagram__\n

  namespace com.groupjn.serviceservice {
    namespace service {
      interface IRoleService {
          {abstract} + findRoleByName()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      interface IUser {
          {abstract} + save()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      class RoleServiceImpl {
          + findRoleByName()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      class UserServiceImpl {
          + save()
      }
    }
  }
  

  RoleServiceImpl .up.|> IRoleService
  RoleServiceImpl o-- RoleRepository : repository
  UserServiceImpl .up.|> IUser
  UserServiceImpl o-- UserRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
